--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/Untitled54_20251107015815" />
-    <link rel="apple-touch-icon" href="/images/Untitled54_20251107015815" />
+    <link rel="icon" type="image/png" href="/images/Untitled54_20251107015815.png" />
+    <link rel="apple-touch-icon" href="/images/Untitled54_20251107015815.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
